skittle hilbert curve

--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgaa3cc2c" class="outline-2">
-<h2 id="orgaa3cc2c">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgaa3cc2c">
+<div id="outline-container-orgda6e571" class="outline-2">
+<h2 id="orgda6e571">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgda6e571">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
