--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ hi i'm luke - this is my blog
 <li><a href="how-this-blog-works.html">how this blog works</a></li>
 <li><a href="networking-in-lisp.html">tcp sockets in common lisp</a></li>
 <li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></li>
+<li><a href="skittle-hilbert-curve.html">skittle hilbert curve</a></li>
 </ul>
 </div>
 </body>
