--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org2c3ad30" class="outline-2">
-<h2 id="org2c3ad30">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org2c3ad30">
+<div id="outline-container-orgb64b116" class="outline-2">
+<h2 id="orgb64b116">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orgb64b116">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org2aa29d2" class="outline-3">
-<h3 id="org2aa29d2">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org2aa29d2">
+<div id="outline-container-org97cb754" class="outline-3">
+<h3 id="org97cb754">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org97cb754">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org2a6d8f3" class="outline-4">
-<h4 id="org2a6d8f3">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org2a6d8f3">
+<div id="outline-container-orgc9a1588" class="outline-4">
+<h4 id="orgc9a1588">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgc9a1588">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orga09c529" class="outline-4">
-<h4 id="orga09c529">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orga09c529">
+<div id="outline-container-org27c41c3" class="outline-4">
+<h4 id="org27c41c3">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org27c41c3">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org946eacf" class="outline-3">
-<h3 id="org946eacf">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org946eacf">
+<div id="outline-container-org23ba5a5" class="outline-3">
+<h3 id="org23ba5a5">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org23ba5a5">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org0a68119" class="outline-3">
-<h3 id="org0a68119">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org0a68119">
+<div id="outline-container-orged03322" class="outline-3">
+<h3 id="orged03322">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orged03322">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orge58b6ed" class="outline-3">
-<h3 id="orge58b6ed">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orge58b6ed">
+<div id="outline-container-orgb6cf275" class="outline-3">
+<h3 id="orgb6cf275">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orgb6cf275">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orga928e8e" class="outline-3">
-<h3 id="orga928e8e">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orga928e8e">
+<div id="outline-container-org18e8a32" class="outline-3">
+<h3 id="org18e8a32">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org18e8a32">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org1611a3a" class="outline-4">
-<h4 id="org1611a3a">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org1611a3a">
+<div id="outline-container-orgee6b285" class="outline-4">
+<h4 id="orgee6b285">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgee6b285">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org3cc9b76" class="outline-3">
-<h3 id="org3cc9b76">Aliasing</h3>
-<div class="outline-text-3" id="text-org3cc9b76">
+<div id="outline-container-org874d2da" class="outline-3">
+<h3 id="org874d2da">Aliasing</h3>
+<div class="outline-text-3" id="text-org874d2da">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org0374f61" class="outline-3">
-<h3 id="org0374f61">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org0374f61">
+<div id="outline-container-org09c3060" class="outline-3">
+<h3 id="org09c3060">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org09c3060">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
