--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org40a9b5d" class="outline-2">
-<h2 id="org40a9b5d">How this blog works</h2>
-<div class="outline-text-2" id="text-org40a9b5d">
+<div id="outline-container-org7b3fa84" class="outline-2">
+<h2 id="org7b3fa84">How this blog works</h2>
+<div class="outline-text-2" id="text-org7b3fa84">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org41cdfdd" class="outline-3">
-<h3 id="org41cdfdd">Org mode</h3>
-<div class="outline-text-3" id="text-org41cdfdd">
+<div id="outline-container-org392aa98" class="outline-3">
+<h3 id="org392aa98">Org mode</h3>
+<div class="outline-text-3" id="text-org392aa98">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-orgc7051b1" class="outline-3">
-<h3 id="orgc7051b1">Github pages</h3>
-<div class="outline-text-3" id="text-orgc7051b1">
+<div id="outline-container-org1f2c7fa" class="outline-3">
+<h3 id="org1f2c7fa">Github pages</h3>
+<div class="outline-text-3" id="text-org1f2c7fa">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgd0d381d" class="outline-3">
-<h3 id="orgd0d381d">Thanks</h3>
-<div class="outline-text-3" id="text-orgd0d381d">
+<div id="outline-container-orge84c67e" class="outline-3">
+<h3 id="orge84c67e">Thanks</h3>
+<div class="outline-text-3" id="text-orge84c67e">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
