--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgb64b116" class="outline-2">
-<h2 id="orgb64b116">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orgb64b116">
+<div id="outline-container-org2ddc4a7" class="outline-2">
+<h2 id="org2ddc4a7">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org2ddc4a7">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org97cb754" class="outline-3">
-<h3 id="org97cb754">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org97cb754">
+<div id="outline-container-org8220a01" class="outline-3">
+<h3 id="org8220a01">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org8220a01">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgc9a1588" class="outline-4">
-<h4 id="orgc9a1588">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgc9a1588">
+<div id="outline-container-orgcb02189" class="outline-4">
+<h4 id="orgcb02189">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgcb02189">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org27c41c3" class="outline-4">
-<h4 id="org27c41c3">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org27c41c3">
+<div id="outline-container-org8deadd4" class="outline-4">
+<h4 id="org8deadd4">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org8deadd4">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org23ba5a5" class="outline-3">
-<h3 id="org23ba5a5">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org23ba5a5">
+<div id="outline-container-orgcd37dee" class="outline-3">
+<h3 id="orgcd37dee">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgcd37dee">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orged03322" class="outline-3">
-<h3 id="orged03322">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orged03322">
+<div id="outline-container-orgb36f3c4" class="outline-3">
+<h3 id="orgb36f3c4">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgb36f3c4">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orgb6cf275" class="outline-3">
-<h3 id="orgb6cf275">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orgb6cf275">
+<div id="outline-container-org3ae61f1" class="outline-3">
+<h3 id="org3ae61f1">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org3ae61f1">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org18e8a32" class="outline-3">
-<h3 id="org18e8a32">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org18e8a32">
+<div id="outline-container-org7540a6f" class="outline-3">
+<h3 id="org7540a6f">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org7540a6f">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgee6b285" class="outline-4">
-<h4 id="orgee6b285">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgee6b285">
+<div id="outline-container-org7be8c5c" class="outline-4">
+<h4 id="org7be8c5c">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org7be8c5c">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org874d2da" class="outline-3">
-<h3 id="org874d2da">Aliasing</h3>
-<div class="outline-text-3" id="text-org874d2da">
+<div id="outline-container-orgfe660c0" class="outline-3">
+<h3 id="orgfe660c0">Aliasing</h3>
+<div class="outline-text-3" id="text-orgfe660c0">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org09c3060" class="outline-3">
-<h3 id="org09c3060">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org09c3060">
+<div id="outline-container-org4b6fe4c" class="outline-3">
+<h3 id="org4b6fe4c">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org4b6fe4c">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
